@@ -9,7 +9,8 @@ v 1.2.7 asdfasdf
 - fix Response plots color not updating immediately when palette colors change
 - hook up second Y axis settings for group delay
 - reduce the relay delay time after empirical testing
-- change graph limit updates to enable multipin/fit
+- reduce graph limit update defn for the GUI upgrade and to enable multi-pin/fit
+- implement pinall and fitall for popup menu on graphs
 v 1.2.6 1/24/26
 - add a QA40x readme on ports
 - read the dc supply voltage, dc current, and temperature on device init
